test_case/rust-lang_rust/89701_942538316.rs
rust
#![test] // error: cannot determine resolution for the attribute macro `test`

fn main() {}
